# HW_19.2

./: .env.sample  .gitignore  catalog_data.json  data.json  groups.json  manage.py  pyproject.toml
blog/: admin.py  forms.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_alter_blog_description_alter_blog_photo.py  0003_remove_blog_slug.py  0004_blog_owner.py
blog/templates/blog/: blog_confirm_delete.html  blog_detail.html  blog_list.html
catalog/: admin.py  forms.py  models.py  services.py  urls.py  views.py
catalog/management/commands/: fill.py
catalog/migrations/: 0001_initial.py  0002_blog.py  0002_product_manufactured_at.py  0003_alter_blog_views_count.py  0004_alter_blog_slug.py  0005_delete_blog_product_slug.py  0006_alter_product_photo_alter_product_purchase_price.py  0007_remove_product_slug.py  0008_alter_category_name.py  0009_version.py  0010_alter_version_current_version.py  0011_alter_version_version_number.py  0012_alter_version_version_number.py  0013_product_owner.py  0014_alter_product_owner.py  0015_remove_product_owner.py  0016_product_owner.py  0017_alter_product_options_product_published_and_more.py
catalog/templates/: contacts.html  home.html  product_detail.html  product_list.html
catalog/templates/catalog/: blog_confirm_delete.html  blog_detail.html  blog_list.html  catalog_list.html  contact.html  home.html  (+4 more)
catalog/templatetags/: my_ff.py
config/: settings.py  urls.py
static/css/: bootstrap.min.css
users/: forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_user_token.py
(+6 files in other folders)
