[tool.poetry]
name = "pythonproject"
version = "0.1.0"
description = ""
authors = ["Nikita <nikita@mer1d1an.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1"
poetry = "^1.8.2"
black = "^24.4.2"
ipython = "^8.24.0"
pillow = "^10.3.0"
psycopg2 = "^2.9.9"
slugify = "^0.0.1"
#django-phonenumber-field = {extras = ["phonenumbers"], version = "^7.3.0"}
redis = "^5.0.7"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
